btl1/initial/target/main/bkit/parser/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int_of_float'", "'float_of_int'", "'int_of_string'", 
                     "'string_of_int'", "'float_of_string'", "'string_of_float'", 
                     "'bool_of_string'", "'string_of_bool'", "'('", "')'", 
                     "'['", "']'", "':'", "'.'", "','", "';'", "'{'", "'}'", 
                     "'+'", "'+.'", "'-'", "'-.'", "'*'", "'*.'", "'\\'", 
                     "'\\.'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'=/='", "'<.'", "'>.'", 
                     "'<=.'", "'>=.'", "'='", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'True'", "'False'", "'EndDo'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LP", "RP", "LB", "RB", "COLON", "DOT", 
                      "COMMA", "SEMI", "LCB", "RCB", "ADDOP", "ADDF", "SUBOP", 
                      "SUBF", "MULOP", "MULF", "DIVOP", "DIVF", "MODOP", 
                      "NOT", "AND", "OR", "EQ", "NEQ", "LT", "GT", "LTE", 
                      "GTE", "NEQF", "LTF", "GTF", "LTEF", "GTEF", "ASSIG", 
                      "BODY", "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", 
                      "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "THEN", "VAR", "WHILE", 
                      "TRUE", "FALSE", "ENDDO", "INTERGER", "FLOAT", "STRING", 
                      "ARRAY", "BOOLEAN", "ID", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_program_part = 1
    RULE_var_dec = 2
    RULE_variable_list = 3
    RULE_scalar_variable = 4
    RULE_composite_variable = 5
    RULE_composite_var_name = 6
    RULE_func_dec = 7
    RULE_params = 8
    RULE_param_list = 9
    RULE_func_body = 10
    RULE_expression_stm = 11
    RULE_term1 = 12
    RULE_term2 = 13
    RULE_term3 = 14
    RULE_term4 = 15
    RULE_term5 = 16
    RULE_term6 = 17
    RULE_term7 = 18
    RULE_operand = 19
    RULE_index_operators = 20
    RULE_callee = 21
    RULE_parameter_callee = 22
    RULE_type_coercions = 23
    RULE_statement_list = 24
    RULE_statement_part = 25
    RULE_assign_stm = 26
    RULE_if_stm = 27
    RULE_elseif_else = 28
    RULE_elseif_one = 29
    RULE_else_one = 30
    RULE_for_stm = 31
    RULE_return_stm = 32
    RULE_while_stm = 33
    RULE_do_while_stm = 34
    RULE_break_stm = 35
    RULE_continue_stm = 36
    RULE_call_stm = 37
    RULE_multiplying = 38
    RULE_adding = 39
    RULE_logical = 40
    RULE_relational = 41

    ruleNames =  [ "program", "program_part", "var_dec", "variable_list", 
                   "scalar_variable", "composite_variable", "composite_var_name", 
                   "func_dec", "params", "param_list", "func_body", "expression_stm", 
                   "term1", "term2", "term3", "term4", "term5", "term6", 
                   "term7", "operand", "index_operators", "callee", "parameter_callee", 
                   "type_coercions", "statement_list", "statement_part", 
                   "assign_stm", "if_stm", "elseif_else", "elseif_one", 
                   "else_one", "for_stm", "return_stm", "while_stm", "do_while_stm", 
                   "break_stm", "continue_stm", "call_stm", "multiplying", 
                   "adding", "logical", "relational" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    LP=9
    RP=10
    LB=11
    RB=12
    COLON=13
    DOT=14
    COMMA=15
    SEMI=16
    LCB=17
    RCB=18
    ADDOP=19
    ADDF=20
    SUBOP=21
    SUBF=22
    MULOP=23
    MULF=24
    DIVOP=25
    DIVF=26
    MODOP=27
    NOT=28
    AND=29
    OR=30
    EQ=31
    NEQ=32
    LT=33
    GT=34
    LTE=35
    GTE=36
    NEQF=37
    LTF=38
    GTF=39
    LTEF=40
    GTEF=41
    ASSIG=42
    BODY=43
    BREAK=44
    CONTINUE=45
    DO=46
    ELSE=47
    ELSEIF=48
    ENDBODY=49
    ENDIF=50
    ENDFOR=51
    ENDWHILE=52
    FOR=53
    FUNCTION=54
    IF=55
    PARAMETER=56
    RETURN=57
    THEN=58
    VAR=59
    WHILE=60
    TRUE=61
    FALSE=62
    ENDDO=63
    INTERGER=64
    FLOAT=65
    STRING=66
    ARRAY=67
    BOOLEAN=68
    ID=69
    WS=70
    ERROR_CHAR=71
    UNCLOSE_STRING=72
    ILLEGAL_ESCAPE=73
    UNTERMINATED_COMMENT=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_part(self):
            return self.getTypedRuleContext(BKITParser.Program_partContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.program_part()
            self.state = 85
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_part(self):
            return self.getTypedRuleContext(BKITParser.Program_partContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(BKITParser.Var_decContext,0)


        def func_dec(self):
            return self.getTypedRuleContext(BKITParser.Func_decContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(BKITParser.Statement_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_program_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_part" ):
                return visitor.visitProgram_part(self)
            else:
                return visitor.visitChildren(self)




    def program_part(self):

        localctx = BKITParser.Program_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_part)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.VAR]:
                    self.state = 87
                    self.var_dec()
                    pass
                elif token in [BKITParser.FUNCTION]:
                    self.state = 88
                    self.func_dec()
                    pass
                elif token in [BKITParser.T__0, BKITParser.T__1, BKITParser.T__2, BKITParser.T__3, BKITParser.T__4, BKITParser.T__5, BKITParser.T__6, BKITParser.T__7, BKITParser.LP, BKITParser.SUBOP, BKITParser.SUBF, BKITParser.NOT, BKITParser.BREAK, BKITParser.CONTINUE, BKITParser.DO, BKITParser.FOR, BKITParser.IF, BKITParser.RETURN, BKITParser.WHILE, BKITParser.INTERGER, BKITParser.FLOAT, BKITParser.STRING, BKITParser.ARRAY, BKITParser.BOOLEAN, BKITParser.ID]:
                    self.state = 89
                    self.statement_list()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 92
                self.program_part()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.var_dec()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.func_dec()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.statement_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = BKITParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(BKITParser.VAR)
            self.state = 100
            self.match(BKITParser.COLON)
            self.state = 101
            self.variable_list()
            self.state = 102
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def scalar_variable(self):
            return self.getTypedRuleContext(BKITParser.Scalar_variableContext,0)


        def composite_variable(self):
            return self.getTypedRuleContext(BKITParser.Composite_variableContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_list" ):
                return visitor.visitVariable_list(self)
            else:
                return visitor.visitChildren(self)




    def variable_list(self):

        localctx = BKITParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_list)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 104
                    self.scalar_variable()
                    pass

                elif la_ == 2:
                    self.state = 105
                    self.composite_variable()
                    pass


                self.state = 108
                self.match(BKITParser.COMMA)
                self.state = 109
                self.variable_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.scalar_variable()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.composite_variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scalar_variableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIG(self):
            return self.getToken(BKITParser.ASSIG, 0)

        def INTERGER(self):
            return self.getToken(BKITParser.INTERGER, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKITParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScalar_variable" ):
                return visitor.visitScalar_variable(self)
            else:
                return visitor.visitChildren(self)




    def scalar_variable(self):

        localctx = BKITParser.Scalar_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_scalar_variable)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(BKITParser.ID)
                self.state = 116
                self.match(BKITParser.ASSIG)
                self.state = 117
                _la = self._input.LA(1)
                if not(((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (BKITParser.INTERGER - 64)) | (1 << (BKITParser.FLOAT - 64)) | (1 << (BKITParser.STRING - 64)) | (1 << (BKITParser.BOOLEAN - 64)))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(BKITParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Composite_variableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def composite_var_name(self):
            return self.getTypedRuleContext(BKITParser.Composite_var_nameContext,0)


        def ASSIG(self):
            return self.getToken(BKITParser.ASSIG, 0)

        def ARRAY(self):
            return self.getToken(BKITParser.ARRAY, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_composite_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComposite_variable" ):
                return visitor.visitComposite_variable(self)
            else:
                return visitor.visitChildren(self)




    def composite_variable(self):

        localctx = BKITParser.Composite_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_composite_variable)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.composite_var_name()
                self.state = 122
                self.match(BKITParser.ASSIG)
                self.state = 123
                self.match(BKITParser.ARRAY)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.composite_var_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Composite_var_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LB)
            else:
                return self.getToken(BKITParser.LB, i)

        def INTERGER(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTERGER)
            else:
                return self.getToken(BKITParser.INTERGER, i)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RB)
            else:
                return self.getToken(BKITParser.RB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_composite_var_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComposite_var_name" ):
                return visitor.visitComposite_var_name(self)
            else:
                return visitor.visitChildren(self)




    def composite_var_name(self):

        localctx = BKITParser.Composite_var_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_composite_var_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BKITParser.ID)
            self.state = 132 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.match(BKITParser.LB)
                self.state = 130
                self.match(BKITParser.INTERGER)
                self.state = 131
                self.match(BKITParser.RB)
                self.state = 134 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LB):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def func_body(self):
            return self.getTypedRuleContext(BKITParser.Func_bodyContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(BKITParser.ParamsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_dec" ):
                return visitor.visitFunc_dec(self)
            else:
                return visitor.visitChildren(self)




    def func_dec(self):

        localctx = BKITParser.Func_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(BKITParser.FUNCTION)
            self.state = 137
            self.match(BKITParser.COLON)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 138
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 139
                self.match(BKITParser.ID)
                self.state = 140
                self.params()
                pass


            self.state = 143
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = BKITParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(BKITParser.PARAMETER)
            self.state = 146
            self.match(BKITParser.COLON)
            self.state = 147
            self.param_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def composite_var_name(self):
            return self.getTypedRuleContext(BKITParser.Composite_var_nameContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = BKITParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 149
                    self.match(BKITParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 150
                    self.composite_var_name()
                    pass


                self.state = 153
                self.match(BKITParser.COMMA)
                self.state = 154
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(BKITParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.composite_var_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def var_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_decContext,i)


        def statement_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Statement_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Statement_listContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_func_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_body" ):
                return visitor.visitFunc_body(self)
            else:
                return visitor.visitChildren(self)




    def func_body(self):
